# awm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/awm/: Cargo.toml
crates/awm-core/: Cargo.toml
crates/awm-core/src/: layout.rs  lib.rs  registry.rs  runtime.rs  session.rs
crates/awm-core/tests/: e2e_mock.rs  registry_layout.rs
crates/awm-parser/: Cargo.toml
crates/awm-parser/src/: lib.rs
crates/awm-parser/tests/: fixtures.rs
crates/awm-proto/: Cargo.toml
crates/awm-proto/src/: event.rs  layout.rs  lib.rs  meta.rs  state.rs  traits.rs  view.rs
crates/awm-proto/tests/: state_machine.rs
crates/awm-pty/: Cargo.toml
crates/awm-pty/src/: lib.rs
crates/awm-pty/tests/: control_channel.rs  spawn.rs
crates/awm-tui/: Cargo.toml
crates/awm-tui/src/: keymap.rs  lib.rs
crates/awm-tui/src/snapshots/: awm_tui__tests__card_populated.snap
crates/awm-tui/tests/: snapshot.rs
crates/awm-tui/tests/snapshots/: snapshot__claude_style.snap  snapshot__markdown_table.snap  snapshot__master_stack.snap  snapshot__monocle.snap  snapshot__triage.snap
crates/awm/src/: main.rs
docs/: approval-capture.jsonl  approval-findings.md  approval-stats-findings.md  askuserquestion-raw.json  blocked-message-findings.md  canusetool-raw.json  claude-output-reference.jsonl  claude-output-reference.txt  exitplanmode-raw.json  gate-answer-findings.md  interrupt-findings.md  interrupt-raw.json  multiturn-findings.md  phase2-worktrees.md  plan-mode-findings.md  resume-findings.md
docs/tasks/: track-a-pty.md  track-b-parser.md  track-c-tui.md
fixtures/: README.md  approval.expected.json  approval.jsonl  askuserquestion-2groups.json  error.expected.json  error.jsonl  garbage.expected.json  garbage.jsonl  mock-agent.py  mock-chat.py  mock-convo.py  mock-die.py  mock-gate-chat.py  mock-interrupt.py  mock-md.py  mock-noisy.py  mock-stream.py  mock-subagents.py  mock-work.py  normal.expected.json  normal.jsonl  subagent-approval.expected.json  subagent-approval.jsonl  subagents.expected.json  subagents.jsonl
scripts/: capture-askuserquestion.py  capture-blocked-message.py  capture-interrupt.py  capture-plan-gate.py  tty-smoke-gate.py  tty-smoke-paste.py  tty-smoke-persist.py  tty-smoke-picker.py  tty-smoke-projects.py  tty-smoke-resume.py  tty-smoke-shell.py  tty-smoke.py
