[package]
name = "awm-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PTY session management for awm (Track A). Phase 2."

[dependencies]
awm-proto = { workspace = true }
portable-pty = { workspace = true }
# Agent-runner mode: spawn the agent via piped stdio and act as the permission
# controller over the stream-json control channel. `process` is added on top of
# the workspace feature set so we can drive the child asynchronously.
tokio = { workspace = true, features = ["process"] }
vt100 = "0.16.2"
