[package]
name = "awm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "awm — agent window manager binary. Runtime that renders agents and rearranges on approval (urgent → master)."

[[bin]]
name = "awm"
path = "src/main.rs"

[dependencies]
awm-proto = { workspace = true }
awm-core = { workspace = true }
awm-pty = { workspace = true }
awm-tui = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
